Related: fdo#84676 try to give floating windows their original stylebits

as they were before becoming .ui components to see if that makes
a difference here

Change-Id: I1699e19f14b18579f6b8c973d64f069b206b7cb8